all warnings removed

--- a/coding_and_cryptography.tex
+++ b/coding_and_cryptography.tex
@@ -109,7 +109,7 @@ podobné předchozímu, ale používá podstatně menší dekódovací tabulku.
 Protože pro zprávu $z = x + e$ pro slovo $x$ s~chybou $e$ platí
 $Hz = He$ (kde $H$ je matice parity), snadno se určí chyba
 z~předpočítané tabulky mapující $He$ na $e$ a z~ní dopočte $x = z -e$.
-Tabulka má velikost $\sum_{i = 0}^{t} {n \choose i} < \lvert C \rvert$,
+Tabulka má velikost $\sum_{i = 0}^{t} \binom{n}{i} < \lvert C \rvert$,
 kde $n$ je délka kódu $C$ a $t$ je nejvyšší možný počet chyb.
 
 
