--- a/complexity.tex
+++ b/complexity.tex
@@ -258,7 +258,7 @@ redukují. Stačí vědět o jednom (předpokládejme, že máme důkaz), že je
 $\NP$-těžký a nyní automaticky víme, že i ten druhý je $\NP$-těžký.
 Důkaz příslušnosti do $\NP$ je snadný, problémy jsou tedy $\NP$-úplné.
 
-\subsection{$\P-\NP$ problém}
+\subsection{\P\ -- \NP\ problém}
 
 \begin{itemize}
 \item $\P \neq \NP$, důkaz dává dolní odhad na řešení SAT se složitostí
