--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,7 @@
 \documentclass{article}
 
+\author{autor}
+
 \usepackage[czech]{babel}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
@@ -35,7 +37,8 @@
 \usepackage{mathtools}
 \usepackage{braket}
 \usepackage{stmaryrd} % mapsfrom
-\usepackage{physics} % \dv{s}{t} for derivative of s by t
+%\usepackage{physics} % \dv{s}{t} for derivative of s by t
+\newcommand{\dv}[2]{\frac{d#1}{d#2}}
 
 \usepackage{algorithm} % this does the figure environment
 \usepackage{algpseudocode} % algorithmicx, this does the actual algs
@@ -61,6 +64,8 @@
   \oldalgorithmic}% Do what was always done with algorithmic environment
 \renewcommand{\theHALG@line}{ALG@line.\thealgorithmicH.\arabic{ALG@line}}
 \makeatother
+
+\newcommand{\algorithmautorefname}{Algorithm}
 
 % Theorems, their numbering and style
 \theoremstyle{plain}
@@ -139,14 +144,13 @@
 \clearpage % end page
 \setcounter{page}{1} % reset counter to 1
 
-\include{probability}
-\include{algebra}
-\include{graph_alg}
-
-\include{automata}
-\include{complexity}
-\include{algorithms_for_hard_problems}
-\include{coding_and_cryptography}
-\include{analysis}
+ \input{probability}
+ \input{algebra}
+ \input{graph_alg}
+ \input{automata}
+ \input{complexity}
+ \input{algorithms_for_hard_problems}
+ \input{coding_and_cryptography}
+ \input{analysis}
 
 \end{document}
