--- a/main.tex
+++ b/main.tex
@@ -49,6 +49,8 @@
 
 \usepackage[capitalize,nameinlink,noabbrev]{cleveref} % has to be below amsthm
 
+\usepackage{listings}
+
 % Don't number algorithms
 \makeatletter
 \renewcommand{\fnum@algorithm}{\fname@algorithm}
